[package]
name = "aec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"
ruint = "1.3"
bevy = "0.8"
bevy_egui = "0.15"
bevy-inspector-egui = "0.12"
# Wait til bevy_editor_pls is in crates.io
#bevy_editor_pls = { git = "https://github.com/jakobhellermann/bevy_editor_pls" }
bevy_asset_loader = { version = "0.12", features = ["2d"] }

[workspace]
resolver = "2"

# Enable first level optimizations in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
